istio-sticky-sessions/iac/01-namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sticky-sessions
  labels:
    istio-injection: enabled
