istio-sticky-sessions/iac/02-kservice-v2.yml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: express-sticky
  namespace: sticky-sessions
spec:
  template:
    metadata:
      name: express-sticky-v2
      annotations:
        autoscaling.knative.dev/minScale: "0"
    spec:
      containers:
        - image: willsenabr/express-sticky:v2
          command: ["npm", "start"]
          ports:
            - containerPort: 3000
              protocol: TCP
  traffic:
    - revisionName: express-sticky-v2
      tag: v2
      percent: 100
