istio-sticky-sessions/iac/02-kservice-v99-only.yml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: express-sticky
  namespace: sticky-sessions
spec:
  template:
    metadata:
      name: express-sticky-v99
      annotations:
        autoscaling.knative.dev/minScale: "0"
    spec:
      containers:
        - image: willsenabr/express-sticky:v99
          command: ["npm", "start"]
          ports:
            - containerPort: 3000
              protocol: TCP
  traffic:
    - revisionName: express-sticky-v99
      tag: v99
      percent: 100
